--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@ $(document).ready(function(e) {
 		row.time = new Date(row.time);
 		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
+		chart.options.data[2].dataPoints.push({x: row.time, y: row.pm1});
+		chart.options.data[3].dataPoints.push({x: row.time, y: row.pm10});
+		chart.options.data[4].dataPoints.push({x: row.time, y: row.pm25});
 		chart.render();
 		
 		$("#temperature > .content").html(row.temperature + " &deg;C");
@@ -130,6 +133,9 @@ $(document).ready(function(e) {
 			row.time = new Date(row.time);
 			chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 			chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
+			chart.options.data[2].dataPoints.push({x: row.time, y: row.pm1});
+			chart.options.data[3].dataPoints.push({x: row.time, y: row.pm10});
+			chart.options.data[4].dataPoints.push({x: row.time, y: row.pm25});
 			 lastRows = row;
 		});
 		chart.render();
