--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@ $(document).ready(function(e) {
 		$('#update_time').html(row.time);
 
 		$("#status").removeClass("success").addClass("danger");
-		$("#status > .content").text("Updating...");
+		$("#status > .content").text("Updating1...");
 		
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
-			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Up to date");
+			$("#status").removeClass("success").addClass("danger");
+			$("#status > .content").text("Updating2..");
 			
 			
 		} else {
-			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Updating");
+			$("#status").removeClass("danger").addClass("success");
+			$("#status > .content").text("Up to date");
 		}
 		setTimeoffline();
 	});
@@ -151,11 +151,11 @@ $(document).ready(function(e) {
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
+			$("#status").removeClass("success").addClass("danger");
+			$("#status > .content").text("Updating.3.");
+		} else {
 			$("#status").removeClass("danger").addClass("success");
 			$("#status > .content").text("Up to date");
-		} else {
-			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Updating...");
 		}
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
