--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@ $(document).ready(function(e) {
 			$("#status > .content").text("Up to date");
 			return;
 		} 
+		else
+		{
+			$("#status").removeClass("success").addClass("danger");
+			$("#status > .content").text("Updating...");
+		}
 		var row = sanp.val();
 		
 		row.time = new Date(row.time);
@@ -110,19 +115,19 @@ $(document).ready(function(e) {
 	 	$("#pm10 > .content").html(row.pm10 + " ug/m3");
 		$('#update_time').html(row.time);
 
-		$("#status").removeClass("success").addClass("danger");
-		$("#status > .content").text("Updating1...");
+		// $("#status").removeClass("success").addClass("danger");
+		// $("#status > .content").text("Updating1...");
 		
-		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
-			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Updating2..");
+		// if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
+		// 	$("#status").removeClass("success").addClass("danger");
+		// 	$("#status > .content").text("Updating2..");
 			
 			
-		} else {
-			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Up to date");
-		}
-		setTimeoffline();
+		// } else {
+		// 	$("#status").removeClass("danger").addClass("success");
+		// 	$("#status > .content").text("Up to date");
+		// }
+		//setTimeoffline();
 	});
 
 	var now = new Date();
@@ -201,7 +206,7 @@ $(document).ready(function(e) {
 			$("#pm10").removeClass("success").addClass("verybad");
 		}
 	
-		setTimeoffline();
+		//setTimeoffline();
 	});
 
 });
