--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ $(document).ready(function(e) {
 		// 	$("#status").removeClass("danger").addClass("success");
 		// 	$("#status > .content").text("Up to date");
 		// }
-		//setTimeoffline();
+		setTimeoffline();
 	});
 
 	var now = new Date();
@@ -206,7 +206,7 @@ $(document).ready(function(e) {
 			$("#pm10").removeClass("success").addClass("verybad");
 		}
 	
-		//setTimeoffline();
+		setTimeoffline();
 	});
 
 });
