--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@ var setTimeoffline = function() {
 
 		<center>
 				<img src=image/aqi.png width="70%" >
-				  <div>Last up date</div></center>
+				  <div class="title">Last up date</div></center>
 				<center>
-				 <div class="dialog success fadeIn animated" class="content" id="update_time"></div> 
+				 <div class="dialog success fadeIn animated" class="title" id="update_time"></div> 
 		</center>
 
       </div>
