--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@ var setTimeoffline = function() {
 
 		<center>
 				<img src=image/aqi.png width="70%" >
-				  <div><b><FONT SIZE=3>Last up date</FONT></b></div></center>
+				  <div><FONT SIZE=4>Last up date</FONT></div></center>
 				<center>
-					<FONT SIZE=3><div class="dialog success fadeIn animated" class="content" id="update_time"></div> </FONT>
+					<FONT SIZE=4><div class="dialog success fadeIn animated" class="content" id="update_time"></div> </FONT>
 		</center>
 
       </div>
