--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@ var setTimeoffline = function() {
 	color: rgba(255,255,255, 0.84);
 	text-align: center;
 }
+.dialog.loading > .content{
+	background: #686868;
+}
 .dialog.primary > .content{
 	background: #00aa9a;
 }
@@ -306,37 +309,37 @@ var setTimeoffline = function() {
         <div class="row">
            <div class="col-sm-4">
              <div class="dialog primary fadeIn animated" id="temperature">
-               <div class="content">00.0 &deg;C</div>
+               <div class="content">Loading...</div>
                <div class="title">Temperature</div>
              </div>
            </div>
            <div class="col-sm-4">
              <div class="dialog info fadeIn animated" id="humidity">
-               <div class="content">00.0 %</div>
+               <div class="content">Loading.../div>
                <div class="title">Humidity</div>
              </div>
            </div>
            <div class="col-sm-4">
              <div class="dialog success fadeIn animated" id="status">
-			   <div class="content">???</div>
+			   <div class="content">Loading...</div>
                <div class="title">Status</div>
              </div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm1">
-				  <div class="content">00.00 ug/m3</div>
+				  <div class="content">Loading.../div>
 				  <div class="title">PM 1</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm25">
-				  <div class="content">00.00 ug/m3 </div>
+				  <div class="content">Loading...</div>
 				  <div class="title">PM 2.5</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm10">
-				  <div class="content">00.00 ug/m3 </div>
+				  <div class="content">Loading...</div>
 				  <div class="title">PM 10</div>
 				</div>
 			</div>
