--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@ var setTimeoffline = function() {
 	background: #ec0f0f;
 }
 
+
 .dialog > .title {
 	background: #FFF;
 	border-radius: 0 0 6px 6px;
@@ -306,37 +307,37 @@ var setTimeoffline = function() {
         <div class="row">
            <div class="col-sm-4">
              <div class="dialog primary fadeIn animated" id="temperature">
-               <div class="content">Loading...</div>
+               <div class="content">00.0 &deg;C</div>
                <div class="title">Temperature</div>
              </div>
            </div>
            <div class="col-sm-4">
              <div class="dialog info fadeIn animated" id="humidity">
-               <div class="content">Loading.../div>
+               <div class="content">00.0 %</div>
                <div class="title">Humidity</div>
              </div>
            </div>
            <div class="col-sm-4">
              <div class="dialog success fadeIn animated" id="status">
-			   <div class="content">Loading...</div>
+			   <div class="content">???</div>
                <div class="title">Status</div>
              </div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm1">
-				  <div class="content">Loading.../div>
+				  <div class="content">00.00 ug/m3</div>
 				  <div class="title">PM 1</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm25">
-				  <div class="content">Loading...</div>
+				  <div class="content">00.00 ug/m3 </div>
 				  <div class="title">PM 2.5</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm10">
-				  <div class="content">Loading...</div>
+				  <div class="content">00.00 ug/m3 </div>
 				  <div class="title">PM 10</div>
 				</div>
 			</div>
