--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@ var setTimeoffline = function() {
 	background: #4fa535;
 }
 .dialog.mediam > .content {
-	background: #f3ef1c;
+	background: #bdba00;
 }
 .dialog.bad > .content {
-	background: #ec940f;
+	background: #db8503;
 }
 .dialog.verybad > .content {
 	background: #ec0f0f;
