--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@ var setTimeoffline = function() {
 	background: #ec0f0f;
 }
 
+.dialog.loading > .content {
+	background: #757575;
+}
+
 
 .dialog > .title {
 	background: #FFF;
@@ -307,7 +311,7 @@ var setTimeoffline = function() {
         <div class="row">
            <div class="col-sm-4">
              <div class="dialog primary fadeIn animated" id="temperature">
-               <div class="content">loading..</div>
+               <div class="loading">loading..</div>
                <div class="title">Temperature</div>
              </div>
            </div>
