--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@ $(document).ready(function(e) {
 	 	$("#pm10 > .content").html(row.pm10 + " ug/m3");
 		$('#update_time').html(row.time);
 
-		$("#status").removeClass("danger").addClass("success");
-		$("#status > .content").text("Up to date");
+		// $("#status").removeClass("danger").addClass("success");
+		// $("#status > .content").text("Up to date");
 		
-		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
-			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Up to date");
+		// if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
+		// 	$("#status").removeClass("danger").addClass("success");
+		// 	$("#status > .content").text("Up to date");
 			
 			
-		} else {
-			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Updating...");
-		}
+		// } else {
+		// 	$("#status").removeClass("success").addClass("danger");
+		// 	$("#status > .content").text("Updating...");
+		// }
 		setTimeoffline();
 	});
 
@@ -155,13 +155,13 @@ $(document).ready(function(e) {
 	
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
-		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
-			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Up to date");
-		} else {
-			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Updating...");
-		}
+		// if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
+		// 	$("#status").removeClass("danger").addClass("success");
+		// 	$("#status > .content").text("Up to date");
+		// } else {
+		// 	$("#status").removeClass("success").addClass("danger");
+		// 	$("#status > .content").text("Updating...");
+		// }
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
@@ -311,7 +311,7 @@ var setTimeoffline = function() {
         <div class="row">
            <div class="col-sm-4">
              <div class="dialog primary fadeIn animated" id="temperature">
-               <div class="loading">loading..</div>
+               <div class="content">loading..</div>
                <div class="title">Temperature</div>
              </div>
            </div>
