--- a/index.html
+++ b/index.html
@@ -100,18 +100,17 @@ $(document).ready(function(e) {
 			$("#status > .content").text("Updating...");
 		}
 		var row = sanp.val();
-		
+		now = new Date(row.time)
 		row.time = new Date(row.time);
 		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
 		chart.render();
-		
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
 		$("#pm1 > .content").html(row.pm1 + " ug/m3");
 	 	$("#pm25 > .content").html(row.pm25 + " ug/m3");
 	 	$("#pm10 > .content").html(row.pm10 + " ug/m3");
-		$('#update_time').html(row.time);
+		$('#update_time').html(now.getHours() +":"+ now.getMinutes() +":" + now.getSeconds() + "  " + now.getUTCFullYear() + "-" + now.getUTCMonth() +"-" + now.getUTCDate());
 
 		// $("#status").removeClass("danger").addClass("success");
 		// $("#status > .content").text("Up to date");
