--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ var setTimeoffline = function() {
 				<img src=image/aqi.png width="70%" >
 				  <div><FONT SIZE=4>Last up date</FONT></div></center>
 				<center>
-					<FONT SIZE=4><div class="dialog success fadeIn animated" class="content" id="update_time"></div> </FONT>
+					<FONT SIZE=4><div class="dialog success fadeIn animated" class="content" id="update_time">loading...</div> </FONT>
 		</center>
 
       </div>
