--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ $(document).ready(function(e) {
 		$("#pm1 > .content").html(row.pm1 + " ug/m3");
 	 	$("#pm25 > .content").html(row.pm25 + " ug/m3");
 	 	$("#pm10 > .content").html(row.pm10 + " ug/m3");
-		$('#update_time').html(now.getHours() +":"+ now.getMinutes() +":" + now.getSeconds() + "  " + now.getUTCFullYear() + "-" + now.getUTCMonth() +"-" + now.getUTCDate());
+		$('#update_time').text(now.getHours() +":"+ now.getMinutes() +":" + now.getSeconds() + "  " + now.getUTCFullYear() + "-" + now.getUTCMonth() +"-" + now.getUTCDate());
 
 		// $("#status").removeClass("danger").addClass("success");
 		// $("#status > .content").text("Up to date");
@@ -148,7 +148,7 @@ $(document).ready(function(e) {
 		$("#pm1 > .content").html(Arow.pm1 + " ug/m3");
 	 	$("#pm25 > .content").html(Arow.pm25 + " ug/m3");
 	 	$("#pm10 > .content").html(Arow.pm10 + " ug/m3");
-		$('#update_time').html(Arow.time);
+		 $('#update_time').text(now.getHours() +":"+ now.getMinutes() +":" + now.getSeconds() + "  " + now.getUTCFullYear() + "-" + now.getUTCMonth() +"-" + now.getUTCDate());
 	
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
@@ -346,9 +346,10 @@ var setTimeoffline = function() {
 
 		<center>
 				<img src=image/aqi.png width="70%" >
-				  <div><FONT SIZE=4>Last up date</FONT></div></center>
-				<center>
-					<FONT SIZE=4><div class="dialog success fadeIn animated" class="content" id="update_time">loading...</div> </FONT>
+				  <div><FONT SIZE=4>Last up date</FONT></div>
+		</center>
+		<center>
+				<FONT SIZE=4><div class="dialog success fadeIn animated" class="content" id="update_time">loading...</div> </FONT>
 		</center>
 
       </div>
