--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ var setTimeoffline = function() {
 	background: #4fa535;
 }
 .dialog.mediam > .content {
-	background: #bdba00;
+	background: #fbff00;
 }
 .dialog.bad > .content {
 	background: #db8503;
