--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@ $(document).ready(function(e) {
 		{
 			$("#status").removeClass("success").addClass("danger");
 			$("#status > .content").text("Updating...");
+			$("#temperature").removeClass("danger").addClass("loading");
+			$("#humidity").removeClass("danger").addClass("loading");
+			$("#pm1").removeClass("danger").addClass("loading");
+			$("#pm25").removeClass("danger").addClass("loading");
+			$("#pm10").removeClass("danger").addClass("loading");
 		}
 		var row = sanp.val();
 		
