--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ var setTimeoffline = function() {
 }
 
 .dialog.verygood > .content {
-	background: #1cc1f3;
+	background: #08b3e7;
 }
 .dialog.good > .content {
 	background: #4fa535;
