--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ var setTimeoffline = function() {
            </div>
            <div class="col-sm-4">
              <div class="dialog info fadeIn animated" id="humidity">
-               <div class="content">loading..</div>
+               <div class="loading">loading..</div>
                <div class="title">Humidity</div>
              </div>
            </div>
