--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ var setTimeoffline = function() {
 	
 	toOffline = setTimeout(function() {
 		$("#status").removeClass("danger").addClass("success");
-		$("#status > .content").text("Up to date");
+		$("#status > .content").text("Up to date99");
 	}, 2 * 60 * 1000);
 }
 
