--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ $(document).ready(function(e) {
 	 	$("#pm10 > .content").html(row.pm10 + " ug/m3");
 		$('#update_time').html(row.tims);
 
-		// $("#status").removeClass("danger").addClass("success");
-		// $("#status > .content").text("Up to date555");
+		$("#status").removeClass("danger").addClass("success");
+		$("#status > .content").text("Up to date555");
 		
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
 			$("#status").removeClass("danger").addClass("success");
