--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ $(document).ready(function(e) {
 		else{
 			$("#status").removeClass("success").addClass("danger");
 			$("#status > .content").text("Updating...cn");
-			Sleep 5;
+			delay(5000);
 		}
 
 		var row = sanp.val();
