--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ $(document).ready(function(e) {
 		Arow.time = new Date(Arow.time);
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
 			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Updating...");
+			$("#status > .content").text("Updating off..."); 
 		} else {
 			$("#status").removeClass("danger").addClass("success");
 			$("#status > .content").text("Up to date");   // ไม่มีอุปกรณ์มาต่อ
