--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ $(document).ready(function(e) {
 			$("#status > .content").text("Updating off..."); 
 		} else {
 			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Up to date");   // ไม่มีอุปกรณ์มาต่อ
+			$("#status > .content").text("Up to date off");   // ไม่มีอุปกรณ์มาต่อ
 		}
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
