--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@ $(document).ready(function(e) {
 	
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
-		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
-			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Updating off..."); 
-		} else {
-			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Up to date off");   // ไม่มีอุปกรณ์มาต่อ
-		}
+		// if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
+		$("#status").removeClass("loading").addClass("success");
+		$("#status > .content").text("Up to dateoff"); 
+		// } else {
+		// 	$("#status").removeClass("danger").addClass("success");
+		// 	$("#status > .content").text("Up to date off");   // ไม่มีอุปกรณ์มาต่อ
+		// }
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
