--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ $(document).ready(function(e) {
 		} 
 		else{
 			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Up to date cn");
+			$("#status > .content").text("Updating...");
 		}
 
 		var row = sanp.val();
