--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@ $(document).ready(function(e) {
 	
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
-		// if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
+		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
 		$("#status").removeClass("loading").addClass("success");
-		$("#status > .content").text("Up to dateoff"); 
-		// } else {
-		// 	$("#status").removeClass("danger").addClass("success");
-		// 	$("#status > .content").text("Up to date off");   // ไม่มีอุปกรณ์มาต่อ
-		// }
+		$("#status > .content").text("Up to dateoffm"); 
+		} else {
+			$("#status").removeClass("danger").addClass("success");
+			$("#status > .content").text("Up to date off");   // ไม่มีอุปกรณ์มาต่อ
+		}
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
