--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ var config = {
   };
 
 $(document).ready(function(e) {
-	$.material.init()
+	$.material.init();
+	$("#status").addClass("loading");
 	$("#temperature").addClass("loading");
 	$("#humidity").addClass("loading");
 	$("#pm1").addClass("loading");
@@ -163,7 +164,7 @@ $(document).ready(function(e) {
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
-		$("#status").removeClass("sucess").addClass("loading");
+		$("#status").addClass("loading");
 		$("#status > .content").text("Wait Device"); // ไม่มีอุปกรณ์มาต่อเลย
 		} else {
 			$("#status").addClass("success");
