--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ $(document).ready(function(e) {
 		$("#status").removeClass("sucess").addClass("loading");
 		$("#status > .content").text("Wait Device"); // ไม่มีอุปกรณ์มาต่อเลย
 		} else {
-			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Online");   // ต่อ แต่ไม่มีไอเทม
+			$("#status").removeClass("loading").removeClass("danger").addClass("success");
+			$("#status > .content").text("Loading...");   // ต่อ แต่ไม่มีไอเทม
 		}
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
