--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ var config = {
 
 $(document).ready(function(e) {
 	$.material.init()
+	$("#status").addClass("loading");
 	$("#temperature").addClass("loading");
 	$("#humidity").addClass("loading");
 	$("#pm1").addClass("loading");
