--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ $(document).ready(function(e) {
 		$("#status").removeClass("sucess").addClass("loading");
 		$("#status > .content").text("Wait Device"); // ไม่มีอุปกรณ์มาต่อเลย
 		} else {
-			$("#status").removeClass("loading").removeClass("danger").addClass("success");
+			$("#status").removeClass("loading").removeClass("success").addClass("danger");
 			$("#status > .content").text("Loading...");   // ต่อ แต่ไม่มีไอเทม
 		}
 
