--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ $(document).ready(function(e) {
 		$("#status > .content").text("Wait Device"); // ไม่มีอุปกรณ์มาต่อเลย
 		} else {
 			$("#status").removeClass("loading").removeClass("success").addClass("danger");
-			$("#status > .content").text("Loading...");   // ต่อ แต่ไม่มีไอเทม
+			$("#status > .content").text("Updating...");   // ต่อ แต่ไม่มีไอเทม
 		}
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
