--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ $(document).ready(function(e) {
 			
 			
 		} else {
-			$("#status").removeClass("success").removeClass("loading").addClass("danger");
-			$("#status > .content").text("Updating...");
+			$("#status").removeClass("danger").removeClass("loading").addClass("success");
+			$("#status > .content").text("Up to date");
 		}
 
 		setTimeoffline();
