--- a/index.html
+++ b/index.html
@@ -378,10 +378,11 @@ th, td {
 					  <th>PM 10</th>
 					</tr>
 					<tr>
-					  <td>Jill</td>
-					  <td>Smith</td> 
-					  <td>50</td>
-					  <td>50</td>
+					  <td>0 - 25</td>
+					  <td>26 - 50</td> 
+					  <td>51 - 100</td>
+					  <td>101 - 200</td>
+					  <td>More than 200</td>
 					</tr>
 					<tr>
 					  <td>Eve</td>
