--- a/index.html
+++ b/index.html
@@ -379,18 +379,23 @@ th, td {
 					</tr>
 					<tr>
 					  <td>0 - 25</td>
-					  <td>26 - 50</td> 
-					  <td>51 - 100</td>
-					  <td>101 - 200</td>
-					  <td>More than 200</td>
+					  
 					</tr>
 					<tr>
-					  <td>Eve</td>
-					  <td>Jackson</td> 
-					  <td>94</td>
-					  <td>50</td>
+					  <td>26 - 50</td> 
+	
+					</tr>
+					<tr>
+						<td>51 - 100</td>
+					</tr>
+					<tr>
+						<td>101 - 200</td>
+					</tr>
+					<tr>
+						<td>More than 200</td>
 					</tr>
 				  </table>
+				  <div></div>
 				  <div><FONT SIZE=4 >Last up date</FONT></div></center>
 				<center>
 					<FONT SIZE=4 ><div class="dialog success fadeIn animated" class="content" id="update_time">Loading...</div> </FONT>
