--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ th, td {
 			</div>
 		</div>
 
-		<center>
+		
 				<!-- <img src=image/aqi.png width="70%" > -->
 				<table style="width:100%">
 					<tr>
@@ -410,7 +410,7 @@ th, td {
 					</tr>
 				  </table>
 				  <div></div>
-				  <div><FONT SIZE=4 >Last up date</FONT></div></center>
+				  <center>  <div><FONT SIZE=4 >Last up date</FONT></div></center>
 				<center>
 					<FONT SIZE=4 ><div class="dialog success fadeIn animated" class="content" id="update_time">Loading...</div> </FONT>
 		</center>
