--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ th, td {
 		</div>
 
 		
-				<!-- <img src=image/aqi.png width="70%" >
+				<!-- <img src=image/aqi.png width="70%" > -->
 				<table style="width:100%">
 					<tr>
 					  <th>AQI</th>
@@ -408,7 +408,7 @@ th, td {
 						<td>x</td>
 						<td>x</td>
 					</tr>
-				  </table> -->
+				  </table>
 				  <div></div>
 				  <center>  <div><FONT SIZE=4 >Last up date</FONT></div></center>
 				<center>
