--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ th, td {
 
 		
 				<!-- <img src=image/aqi.png width="70%" > -->
-				<table style="width:100%">
+				<table style="width:50%;">
 					<tr>
 					  <th>AQI</th>
 					  <th>PM 2.5</th> 
@@ -408,6 +408,7 @@ th, td {
 					</tr>
 					<tr>
 						<td>More than 200</td>
+						<td>x</td>
 						<td>x</td>
 						<td>x</td>
 					</tr>
