--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ th, td {
 
 		
 				<!-- <img src=image/aqi.png width="70%" > -->
-				<table style="width:50%;">
+				<center><table style="width:50%;">
 					<tr>
 					  <th>AQI</th>
 					  <th>PM 2.5</th> 
@@ -412,7 +412,7 @@ th, td {
 						<td>x</td>
 						<td>x</td>
 					</tr>
-				  </table>
+				  </table></center>
 				  <div></div>
 				  <center>  <div><FONT SIZE=4 >Last up date</FONT></div></center>
 				<center>
